@@ -613,11 +613,11 @@ name|void
 name|close
 parameter_list|()
 block|{
-name|List
+name|Collection
 argument_list|<
-name|String
+name|SolrCore
 argument_list|>
-name|coreNames
+name|coreList
 decl_stmt|;
 name|List
 argument_list|<
@@ -644,19 +644,25 @@ init|(
 name|modifyLock
 init|)
 block|{
-name|coreNames
+comment|// make a copy of the cores then clear the map so the core isn't handed out to a request again
+name|coreList
 operator|=
 operator|new
 name|ArrayList
 argument_list|<
-name|String
+name|SolrCore
 argument_list|>
 argument_list|(
 name|cores
 operator|.
-name|keySet
+name|values
 argument_list|()
 argument_list|)
+expr_stmt|;
+name|cores
+operator|.
+name|clear
+argument_list|()
 expr_stmt|;
 name|transientNames
 operator|=
@@ -686,7 +692,7 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|coreNames
+name|coreList
 operator|.
 name|size
 argument_list|()
@@ -710,44 +716,11 @@ condition|)
 break|break;
 for|for
 control|(
-name|String
-name|coreName
-range|:
-name|coreNames
-control|)
-block|{
 name|SolrCore
 name|core
-init|=
-name|cores
-operator|.
-name|get
-argument_list|(
-name|coreName
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|core
-operator|==
-literal|null
-condition|)
-block|{
-name|CoreContainer
-operator|.
-name|log
-operator|.
-name|info
-argument_list|(
-literal|"Core "
-operator|+
-name|coreName
-operator|+
-literal|" moved from core container list before closing."
-argument_list|)
-expr_stmt|;
-block|}
-else|else
+range|:
+name|coreList
+control|)
 block|{
 try|try
 block|{
@@ -776,23 +749,6 @@ argument_list|,
 name|t
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-synchronized|synchronized
-init|(
-name|modifyLock
-init|)
-block|{
-name|cores
-operator|.
-name|remove
-argument_list|(
-name|coreName
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 block|}
 block|}
 for|for
